Update links to Cloudflare Pages

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     <h1>Painéis de Gestão e Compras</h1>
 
     <div class="grid">
-        <a href="https://pedroaraujo12.github.io/dashboard-licitacoes/pmo-dashboard.html" class="card" target="_blank">
+        <a href="https://paines-licitacoes.pages.dev/pmo-dashboard.html" class="card" target="_blank">
             <h2>📊 PMO Dashboard</h2>
             <p>Visão geral do pipeline de projetos, cronogramas e marcos críticos da coordenação.</p>
         </a>
 
-        <a href="https://pedroaraujo12.github.io/dashboard-licitacoes/index.html" class="card" target="_blank">
+        <a href="https://paines-licitacoes.pages.dev/index.html" class="card" target="_blank">
             <h2>⚖️ Dashboard de Licitações</h2>
             <p>Acompanhamento detalhado de processos licitatórios, modalidades e status de contratação.</p>
         </a>
